fixed alignment of icons and hero image

--- a/src/Jumbotron.scss
+++ b/src/Jumbotron.scss
@@ -20,7 +20,7 @@
         
 
         li { 
-            float:left;
+            float:center;
             img {
                 width: 26px;
                 height: 26px;
@@ -45,13 +45,13 @@
 }
 
 .App-jumbotron-hero-image {
-    max-width: 300px;
-    @media (min-width: 576px) { 
+    @media (min-width: 450px) { 
         max-width: 500px;
+        padding: 10px;
     }
 
-    @media (min-width: 768px) { 
-        max-width: 700px;
+    @media (min-width: 800px) { 
+        max-width: 850px;
     }
 
 
